--- a/ionic_photos/src/App.css
+++ b/ionic_photos/src/App.css
@@ -1,3 +1,48 @@
+.center {
+  margin: 0 auto; }
+
+.full {
+  width: 100%; }
+
+.modal-href a:link {
+  font-style: italic;
+  font-size: .75rem; }
+
+.modal-href a:hover {
+  font-size: .95rem;
+  font-style: normal; }
+
+.modal {
+  color: white;
+  height: auto; }
+
+.float-right {
+  float: right; }
+
+.image .modal-image {
+  object-fit: contain;
+  height: 80vh; }
+
+.hero-body {
+  flex-direction: column; }
+
+.red {
+  width: 100%;
+  flex-direction: column; }
+
+.green {
+  max-height: 10rem;
+  margin: 0 auto;
+  margin-top: 1rem;
+  overflow: hidden; }
+
+.green:hover {
+  max-height: none; }
+
+@media screen and (max-width: 481px) {
+  .green {
+    width: 100%; } }
+
 /*! bulma.io v0.7.1 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
