--- a/ionic_photos/src/App.scss
+++ b/ionic_photos/src/App.scss
@@ -50,6 +50,42 @@ $primary-invert: $blue-invert;
   width: 100%;
   flex-direction: column;
 }
+.image-collection {
+  // display: flex;
+  // flex-direction: row;
+  display: inline-flex;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  // border:rgb(221, 193, 140) 2px dotted;
+  height: 45vh;
+  width: 200vw;
+}
+.image-collection .image {
+  height: 100%;
+  // border: blue 2px solid;
+  width:auto;
+}
+.image-collection .image img{
+  width: auto;
+  height: 100%;
+  // border: green 1px dotted;
+  object-fit: scale-down;
+  padding-right: .2rem;
+}
+
+.collection-preview {
+  
+}
+.collection-preview {
+  // border: rgb(2, 201, 78) solid 1px;
+  // background-color: aquamarine;
+  width: 60vw;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 2rem;
+  overflow: hidden;
+}
 
 // .pink{
 //   padding: 10px;
@@ -67,13 +103,20 @@ $primary-invert: $blue-invert;
 .green{
   // border: rgb(2, 201, 78) solid 1px;
   // background-color: aquamarine;
-  max-height: 10rem;
+  max-height: 15rem;
+  width:auto;
   margin: 0 auto;
-  margin-top: 1rem;
   overflow: hidden;
+  transition: max-height 0.2s ease;
+  transition-delay: .5s;
 }
 .green:hover{
-  max-height: none;
+  max-height: 100%;
+}
+
+.green-img {
+  object-fit: cover;
+  object-position: 0 0;
 }
 // @media screen and (max-height: 481px) { // iPad portrait
 //   .modal-image img{
