--- a/ionic_photos/src/App.css
+++ b/ionic_photos/src/App.css
@@ -54,8 +54,8 @@
   overflow: hidden; }
 
 .preview {
-  max-height: 15rem;
-  width: auto;
+  max-height: 10rem;
+  width: 75vw;
   margin: 0 auto;
   overflow: hidden;
   transition: max-height 0.2s ease;
@@ -67,20 +67,40 @@
 .preview:hover {
   max-height: 100%; }
 
-@media screen and (max-width: 481px) {
+.red {
+  padding: 5px;
+  border: red solid 2px;
+  width: auto; }
+
+.purple {
+  padding: 5px;
+  border: purple solid 2px;
+  width: auto; }
+
+.modal_content {
+  padding-left: 20%;
+  padding-right: 20%; }
+
+@media screen and (min-width: 500px) {
   .preview {
-    width: 100%; } }
+    max-height: 100%;
+    max-width: 50vw;
+    margin: 1rem auto; }
+    .preview-img {
+      width: 100%;
+      height: 100%;
+      object-fit: scale-down;
+      overflow: hidden; } }
 
-@media screen and (min-width: 700px) and (max-width: 950px) {
-  .modal-content {
+@media screen and (min-width: 855px) and (max-width: 1020px) {
+  .modal-words {
     margin: 0 auto;
-    padding-left: 6%;
-    padding-right: 6%; } }
+    max-width: 80vw; } }
 
-@media screen and (min-width: 950px) {
-  .modal-content {
-    padding-left: 15%;
-    padding-right: 15%; } }
+@media screen and (min-width: 1020px) and (max-width: 1440px) {
+  .modal-words {
+    margin: 0 auto;
+    max-width: 50vw; } }
 
 /*! bulma.io v0.7.1 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
