late commit, got favoriting to work, hoping to look at error handling OR tests, but probably can't do both, unfortunately

--- a/ionic_photos/src/App.scss
+++ b/ionic_photos/src/App.scss
@@ -17,6 +17,8 @@ $modal-content-spacing-mobile: 0px;
 
 .center {
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 .full {
   width: 100%;
@@ -111,9 +113,21 @@ $modal-content-spacing-mobile: 0px;
   padding-left: 20%;
   padding-right: 20%;
 }
+
+.favorite{
+  background-image: url('./iconmonstr-favorite-7-240.png');
+  height: 30px;
+  width: 30px;
+  background-repeat: none;
+  background-size: contain;
+  position: fixed;
+  top: 15vh;
+  left: 10vw;
+  z-index: 99999999;
+}
 @media screen and (min-width: 500px) {
   .preview {
-    max-height: 100%;
+    max-height: 15rem;
     max-width: 50vw;
     margin: 1rem auto;
     &-img{
