--- a/ionic_photos/src/App.css
+++ b/ionic_photos/src/App.css
@@ -1,5 +1,7 @@
 .center {
-  margin: 0 auto; }
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column; }
 
 .full {
   width: 100%; }
@@ -81,9 +83,20 @@
   padding-left: 20%;
   padding-right: 20%; }
 
+.favorite {
+  background-image: url("./iconmonstr-favorite-7-240.png");
+  height: 30px;
+  width: 30px;
+  background-repeat: none;
+  background-size: contain;
+  position: fixed;
+  top: 15vh;
+  left: 10vw;
+  z-index: 99999999; }
+
 @media screen and (min-width: 500px) {
   .preview {
-    max-height: 100%;
+    max-height: 15rem;
     max-width: 50vw;
     margin: 1rem auto; }
     .preview-img {
