--- a/ionic_photos/src/App.scss
+++ b/ionic_photos/src/App.scss
@@ -115,7 +115,8 @@ $modal-content-spacing-mobile: 0px;
 }
 
 .favorite{
-  background-image: url('./iconmonstr-favorite-7-240.png');
+  // background-image: url('./iconmonstr-favorite-7-240.png');
+  background-image: url('./iconmonstr-favorite-1-240.png');
   height: 30px;
   width: 30px;
   background-repeat: none;
@@ -124,6 +125,10 @@ $modal-content-spacing-mobile: 0px;
   top: 15vh;
   left: 10vw;
   z-index: 99999999;
+}
+
+.nomargin{
+  margin: 0;
 }
 @media screen and (min-width: 500px) {
   .preview {
